# texfuncs

./: CMakeLists.txt  ExtractInterpolateBDHW.cu  ExtractInterpolateBDHW.lua  README.md  TexFunCropFlip.lua  TexFunCropJitter.lua  TexFunCustom.lua  TexFunDeformation.lua  TexFunFixedResize.lua  TexFunRandFlip.lua  TexFunRandResize.lua  init.cu  init.lua  nnbhwdtexfuncs-scm-1.rockspec  texfuncs-scm-1.rockspec  utils.c  utils.h
